deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ashu-cisco-app
  name: ashu-cisco-app
  namespace: ashu-project # namespace 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ashu-cisco-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ashu-cisco-app
    spec:
      containers:
      - image: dockerashu/ashuwebapp:ciscov1
        name: ashuwebapp
        ports:
        - containerPort: 80
        imagePullPolicy: Always # everytime pull image 
        resources: # restricting pod container in term of resoruces 
          requests:
            cpu: 100m
            memory: 200M
          limits:
            cpu: 200m
            memory: 300M
