svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ashulbfinal
  name: ashulbfinal
  namespace: ashu-project # namespace 
spec:
  ports:
  - name: 1234-80
    port: 1234
    protocol: TCP
    targetPort: 80
  selector: # endpoint creator using pod label 
    app: ashu-cisco-app # this is label of pod 
  type: ClusterIP
status:
  loadBalancer: {}
